--- a/src/app.css
+++ b/src/app.css
@@ -137,4 +137,13 @@
     body {
         @apply bg-background text-foreground;
     }
+
+    button,
+    [role="button"] {
+        cursor: pointer;
+    }
+    button:disabled,
+    [role="button"]:disabled {
+        cursor: default;
+    }
 }
